melhoramento do desafio

--- a/ds-17/index.html
+++ b/ds-17/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="topo">Topo</div>
-        <div class="menu">menu</div>
-        <div class="principal">principal</div>
-        <div class="secundario">secundario</div>
-        <div class="rodape">rodape</div>
+        <div class="caixa topo">Topo</div>
+        <div class="caixa menu">menu</div>
+        <div class="caixa principal">principal</div>
+        <div class="caixa secundario">secundario</div>
+        <div class="caixa rodape">rodape</div>
     </div>
 </body>
 </html>
